--- a/site/04-user/index.html
+++ b/site/04-user/index.html
@@ -413,6 +413,8 @@ limit : 本次列表的数量;</p>
         &quot;users&quot;: [
         {
             &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg&quot;,
+            &quot;card&quot;:1,   // 查询信息是否附加绑定到用户的卡信息，不填或0则不添加，1为添加查询卡信息
+            &quot;face&quot;:1,   // 查询信息是否附加用户的人脸特征信息，不填或0则不添加，1为添加查询人脸特征信息
         },
         {
             &quot;userid&quot;: &quot;1aw6wHu2EeqZmH943F8eUg&quot;,
