--- a/site/08-device/index.html
+++ b/site/08-device/index.html
@@ -516,7 +516,7 @@ chanel : 准备获取的摄像头通道，目前仅支持chanel 0，红外通道
 
     &quot;body&quot;:{
         &quot;type&quot;:&quot;fdr&quot;,
-        &quot;state&quot;:&quot;start&quot;     // 返回算法引擎状态
+        &quot;state&quot;:&quot;running&quot;     // 返回算法引擎状态: running, stop
     }
 }
 </code></pre>
