--- a/site/02-register/index.html
+++ b/site/02-register/index.html
@@ -539,7 +539,7 @@ public-key 采用base64编码后的串
     }
 }
 </code></pre>
-<p>在本文档的后续章节中，所有的消息header在MQTT协议场景下，均需要添加devid，不再赘述。</p>
+<p><strong><em> 在本文档的后续章节中，所有的消息header在MQTT协议场景下，均需要添加devid，不再赘述。</em></strong></p>
               
             </div>
           </div>
