--- a/site/00-version/index.html
+++ b/site/00-version/index.html
@@ -133,6 +133,11 @@
 <hr />
 <p>修改记录:</p>
 <ol>
+<li>2021-05-19</li>
+<li>支持MQTT传输方式</li>
+<li>
+<p>部分接口做了细节调整</p>
+</li>
 <li>
 <p>2021-02-22</p>
 </li>
@@ -150,6 +155,9 @@
 </li>
 <li>
 <p>删除http client的支持</p>
+</li>
+<li>
+<p>删除规则支持</p>
 </li>
 <li>
 <p>2020-11-22</p>
