--- a/site/01-introduction/index.html
+++ b/site/01-introduction/index.html
@@ -143,13 +143,13 @@
               
                 <h1 id="_1">系统介绍</h1>
 <hr />
-<p>WalOS（Walnut OS）是杭州八识科技有限公司开发的基于深度学习算法的边缘计算嵌入式操作系统，主要用于集成有人脸识别、人脸抓拍、人形检测、非机动机检测、行为分析等AI算法的嵌入式产品，包括人脸识别门禁产品、考勤机产品；人脸抓拍、人形检测与跟踪等智能相机产品；车牌识别、非机动车检测等智能相机产品。</p>
+<p>WalOS（Walnut OS）是基于深度学习算法的边缘计算嵌入式操作系统，主要用于集成有人脸识别、人脸抓拍、人形检测、非机动机检测、行为分析等AI算法的嵌入式产品，包括人脸识别门禁产品、考勤机产品；人脸抓拍、人形检测与跟踪等智能相机产品；车牌识别、非机动车检测等智能相机产品。</p>
 <p>WalOS分为几个子系统，包括:</p>
 <ol>
 <li>图像处理子系统: 集成有ISP调节算法，图像处理算法等；</li>
 <li>AI算法子系统: 集成有人脸检测算法、人脸特征提取算法、人形检测算法、非机动机检测算法、车牌识别算法等视频结构化算法；</li>
 <li>控制子系统: 集成外设控制，包括刷卡、雷达、二维码读头、人体测温等模块，并可控制继电器、RS485接口外设、韦根口门禁、梯控等；</li>
-<li>管理子系统: 集成webapi服务，可对接八识智云平台、八识门禁控制器、企业微信以及大量第三方应用平台软件；</li>
+<li>管理子系统: 集成webapi服务，可对接智云平台、门禁控制器、企业微信以及大量第三方应用平台软件；</li>
 <li>交互子系统: 通过图形界面、语音、触摸屏等实现用用户的交互； </li>
 </ol>
 <h2 id="_2">管理模式</h2>
@@ -184,7 +184,7 @@
         &quot;hardware-version&quot; : &quot;v1.2.0&quot;,          // 硬件载体版本号
         &quot;walos-version&quot; : &quot;v2.1.0&quot;,             // WalOS 操作系统版本号
         &quot;protocol-version&quot;: &quot;v2.2.0&quot;,           // 协议版本号
-        &quot;algm-vendor&quot; : &quot;bashi&quot;,                // 算法供应商
+        &quot;algm-vendor&quot; : &quot;xxxx&quot;,                // 算法供应商
         &quot;algm-version&quot;  : &quot;v1.1.0&quot;,             // 算法版本号
     }
 }
