--- a/site/02-register/index.html
+++ b/site/02-register/index.html
@@ -282,7 +282,7 @@
 <li>订阅消息：设备向平台发送订阅请求，订阅设备通知，设备进入正常工作状态；</li>
 </ol>
 <p>当设备连接后，设备每5秒向平台发送一次心跳信息，连续5次平台没有响应心跳，则设备断开连接。</p>
-<p>初次开机的设备会进行1/2/3/4/5步，已激活的设备直接进行第1/5步操作；</p>
+<p>初次开机的设备会进行1/2/3/4/5步，已激活的设备直接进行第1/3/5步操作；</p>
 <h5 id="_7">同步时间</h5>
 <ul>
 <li>请求</li>
