--- a/site/03-configuration/index.html
+++ b/site/03-configuration/index.html
@@ -179,7 +179,7 @@ HTTP头：token = , 使用登陆时返回的token</p>
         &quot;configs&quot;:[
         {
             &quot;key&quot;:&quot;org-id&quot;,
-            &quot;value&quot;:&quot;Bashi Technology&quot;,
+            &quot;value&quot;:&quot;xxx Technology&quot;,
             &quot;class&quot;:&quot;interactive&quot;,
             &quot;desc&quot; : &quot;组织&quot;,
             &quot;options&quot; : &quot;cp&quot;
@@ -262,7 +262,7 @@ HTTP头：token = , 使用登陆时返回的token</p>
 
     {
         &quot;key&quot;:&quot;org-id&quot;,
-        &quot;value&quot;:&quot;Bashi Technology&quot;,
+        &quot;value&quot;:&quot;xxx Technology&quot;,
         &quot;class&quot;:&quot;interactive&quot;,
         &quot;desc&quot; : &quot;组织，与GMT 0 相差的分钟数&quot;,
         &quot;options&quot; : &quot;cp&quot;
