--- a/site/08-device/index.html
+++ b/site/08-device/index.html
@@ -659,7 +659,7 @@ chanel : 准备获取的摄像头通道，目前仅支持chanel 0，红外通道
 
     &quot;body&quot;: {
         &quot;apn&quot;:&quot;public.vpdn&quot;,
-        &quot;user&quot;:&quot;admin@bashisense.com&quot;,
+        &quot;user&quot;:&quot;admin@xxxx.com&quot;,
         &quot;pass&quot;:&quot;@skd9kwdkk&quot;,
         &quot;auth&quot;:0, // 0=none，1=pap，2=chap，3=pap，chap）
     }
