--- a/site/04-user/index.html
+++ b/site/04-user/index.html
@@ -178,7 +178,7 @@ HTTP头：token = , 使用登陆时返回的token</p>
     &quot;state&quot;: 0,                 // 用户状态，正常用户是正值，负值为黑名单，定制产品使用，可不填写
 
     &quot;face&quot;:{
-        &quot;vendor&quot;:&quot;bashi&quot;,       // 人脸算法供应商，double check使用
+        &quot;vendor&quot;:&quot;xxxx&quot;,       // 人脸算法供应商，double check使用
         &quot;version&quot;:&quot;v2.1.0&quot;,     // 人脸算法版本, double check使用
         &quot;feature&quot;: &quot;data....&quot;   // base64编码的用户特征值，由设备计算，同类型设备，算法版本一致的可以直接下载，节省时间
     },
@@ -518,7 +518,7 @@ data : base64编码的数据</p>
         &quot;userid&quot;: &quot;1avsoHu2EeqZmH943F8eUg&quot;,
 
         &quot;face&quot;:{
-            &quot;vendor&quot;:&quot;bashi&quot;,       // 人脸算法供应商，double check使用
+            &quot;vendor&quot;:&quot;xxxx&quot;,       // 人脸算法供应商，double check使用
             &quot;version&quot;:&quot;v2.1.0&quot;,     // 人脸算法版本, double check使用
             &quot;feature&quot;: &quot;data....&quot;   // base64编码的用户特征值，由设备计算，同类型设备，算法版本一致的可以直接下载，节省时间
         }
