--- a/site/index.html
+++ b/site/index.html
@@ -131,17 +131,14 @@
               
                 <h1 id="_1">首页</h1>
 <hr />
-<p>欢迎访问杭州八识科技开发文档网站</p>
-<p>杭州八识科技开发文档主要为三类：</p>
+<p>欢迎访问开发文档网站</p>
+<p>开发文档主要为三类：</p>
 <ol>
 <li>
-<p>WalOS SDK开发文档，包括使用WalOS操作操作系统的全系列门禁机、访客机、考勤机等产品，使用者采用http协议访问设备，或配置设备采用http协议、websocket协议访问第三方平台；</p>
+<p>WalOS SDK开发文档，包括使用WalOS操作操作系统的全系列门禁机、访客机、考勤机等产品，使用者采用http协议访问设备，或配置设备采用http协议、websocket协议、mqtt协议访问第三方平台；</p>
 </li>
 <li>
 <p>WalOS local SDK开发文档，该接口将允许用户的程序运行在全系列门禁机产品中，通过工具打包到产品的firmware包中，并推送升级或刷机到硬件设备中，此部分文档仅对部分合作伙伴开放；</p>
-</li>
-<li>
-<p>八识智云平台开发文档，第三方平台直接访问八识云平台，并通过云平台方向八识硬件设备或业务系统。</p>
 </li>
 </ol>
               
@@ -197,5 +194,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2021-05-19 07:44:29.409045+00:00
+Build Date UTC : 2021-05-20 09:32:52.114751+00:00
 -->
