--- a/site/ipc/00-version/index.html
+++ b/site/ipc/00-version/index.html
@@ -142,56 +142,9 @@
 <hr />
 <p>修改记录:</p>
 <ol>
-<li>2021-05-19</li>
-<li>支持MQTT传输方式</li>
-<li>
-<p>部分接口做了细节调整</p>
-</li>
-<li>
-<p>2021-02-22</p>
-</li>
-<li>
-<p>为适合GOLANG等强类型语言的开发，对消息体进行一次调整，与v2.3.x版本不兼容，但移植非常容易；</p>
-</li>
-<li>去掉开门规则配置模块，此功能不再提供；</li>
-<li>去掉非websocket的其它场景的描述与兼容，统一使用websocket协议进行数据交换，简化开发；</li>
-<li>Web API功能与websocket统一（除认证部分外）</li>
-<li>
-<p>添加梯控部分接口</p>
-</li>
-<li>
-<p>2020-12-02</p>
-</li>
-<li>
-<p>删除http client的支持</p>
-</li>
-<li>
-<p>删除规则支持</p>
-</li>
-<li>
-<p>2020-11-22</p>
-</li>
-</ol>
-<p>-迁移到readthedocs</p>
-<ol>
-<li>
-<p>2020-08-27</p>
-</li>
-<li>
-<p>添加规则</p>
-</li>
-<li>
-<p>2020-03-27</p>
-</li>
-<li>
-<p>添加访客</p>
-</li>
-<li>
-<p>2020-02-20</p>
-</li>
-<li>
-<p>初始版本</p>
-</li>
+<li>2021-06-09</li>
+<li>智能相机接口文档从人脸门禁文档中拆离</li>
+<li>根据智能相机的需求，对管理接口进行一些调整</li>
 </ol>
               
             </div>
