--- a/site/ipc/08-event/index.html
+++ b/site/ipc/08-event/index.html
@@ -173,6 +173,7 @@ HTTP头：token = , 使用登陆时返回的token</p>
 
     // 人脸识别事件包括下面三项
     &quot;uid&quot;: &quot;TUID-876991&quot;,       // 识别出的用户ID，或陌生人 0000开头的ID
+    &quot;gid&quot;: &quot;s8slljwlslsk&quot;,      // 识别出的用户的组ID，陌生人组为0000开头的ID
     &quot;score&quot;: 0.55,         //  识别相似度
     &quot;sharp&quot;: 0.95,         //  照片清晰度
 }
